updated tthe alert info

--- a/index1.html
+++ b/index1.html
@@ -19,18 +19,22 @@
             <div class="col-12">
                 <div class="tetx--center">
                     <h1>our menu</h1>
+                    <div class="alert alert-info" role="alert" >Our resturant will be closed on new year's day</div>
                 </div>
             </div>
         </div>
         <div class="row">
 
             <div class="col-12 col-lg-6">
-                <h2>falafel</h2>
+                <h2>falafel <span class="badge bg-secondary"></span></h2>
                 <p>chickpea,herbs,spices</p>
                 <h2>fried calamari.</h2>
                 <p>squid,buttermilk</p>
             </div>
             <div class="col-12 col-lg-6">
+                <div class="text-">
+                    <button type="button" class="btn btn-primary">order online</button>
+                </div>center
                 <h2>pasta salad</h2>
                 <p>letucce,vegetables,mazzarella</p>
                 <h2>greek salad</h2>
